[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scsctl"
version = "0.0.3"
authors = [{name="Jegath S", email="jegath@intelops.dev" }]
description = "Tool for automating Vulnerability Risk Management and Software Supply Chain Security Measures"
readme = "README.md"
dependencies = ['click==8.1.3', 'clickhouse-driver==0.2.6', 'numpy==1.25.0', 'requests==2.32.0','questionary==1.10.0','tabulate==0.9.0','kubernetes==27.2.0']
requires-python = ">=3.9"

[project.scripts]
scsctl = 'scsctl.app:cli'